--- a/ldap-web/pom.xml
+++ b/ldap-web/pom.xml
@@ -65,6 +65,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>it.consoft</groupId>
+			<artifactId>ldap-rest-beans</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
