--- a/ldap-rest/pom.xml
+++ b/ldap-rest/pom.xml
@@ -45,5 +45,12 @@
 			<artifactId>ldap-rest-beans</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.5</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
