--- a/ldap-web/pom.xml
+++ b/ldap-web/pom.xml
@@ -70,6 +70,17 @@
 			<artifactId>ldap-rest-beans</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.22.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
