--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
 
 	<packaging>pom</packaging>
 
+	<properties>
+		<slf4j.version>1.7.13</slf4j.version>
+		<log4j2.version>2.2</log4j2.version>
+
+	</properties>
+
 
 	<dependencies>
 
@@ -17,6 +23,31 @@
 			<artifactId>junit</artifactId>
 			<version>4.5</version>
 			<scope>test</scope>
+		</dependency>
+
+
+		<!-- LOGGING -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<!-- LOG4J -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j2.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j2.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -35,7 +66,7 @@
 	</build>
 
 	<modules>
-		
+
 		<module>ldap-web</module>
 		<module>ldap-rest</module>
 		<module>ldap-rest-beans</module>
