--- a/ldap-rest/pom.xml
+++ b/ldap-rest/pom.xml
@@ -16,6 +16,38 @@
 		<jaxrs.version>2.0.1</jaxrs.version>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>test</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<properties>
+				<env>test</env>
+			</properties>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.6</version>
+						<configuration>
+							<webResources>
+								<resource>
+									<directory>src/main/resources</directory>
+									<filtering>true</filtering>
+								</resource>
+							</webResources>
+						</configuration>
+					</plugin>
+				</plugins>
+
+			</build>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<!-- JAX-RS -->
 		<dependency>
@@ -49,6 +81,13 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.22.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>commons-io</groupId>
