--- a/ldap-rest/pom.xml
+++ b/ldap-rest/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>it.edenred</groupId>
+			<artifactId>ConsoftLibPortale</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 
 	</dependencies>
