--- a/ldap-web-spring/src/main/webapp/WEB-INF/web.xml
+++ b/ldap-web-spring/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 	</filter-mapping>
 
 	<servlet>
-		<servlet-name>hello-dispatcher</servlet-name>
+		<servlet-name>main-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -22,7 +22,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>hello-dispatcher</servlet-name>
+		<servlet-name>main-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
@@ -32,7 +32,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring-core-config.xml</param-value>
+<!-- 		<param-value>/WEB-INF/spring-core-config.xml</param-value> -->
 		<param-value>/WEB-INF/spring-security-config.xml</param-value>
 	</context-param>
 
