--- a/ldap-web-spring/src/main/webapp/WEB-INF/web.xml
+++ b/ldap-web-spring/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,18 @@
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 
+	<filter>
+		<filter-name>localizationFilter</filter-name>
+		<filter-class>it.consoft.ldap.web.filter.LocalizationFilter</filter-class>
+	</filter>
+
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>localizationFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
