--- a/ldap-rest/pom.xml
+++ b/ldap-rest/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -50,13 +49,13 @@
 	</profiles>
 
 	<dependencies>
-		<!-- JAX-RS -->
+<!-- JAX-RS -->
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>${jaxrs.version}</version>
 		</dependency>
-		<!-- Jersey 2.19 -->
+<!-- Jersey 2.19 -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
@@ -67,48 +66,39 @@
 			<artifactId>jersey-server</artifactId>
 			<version>${jersey2.version}</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.glassfish.jersey.core</groupId> -->
-		<!-- <artifactId>jersey-client</artifactId> -->
-		<!-- <version>${jersey2.version}</version> -->
-		<!-- </dependency> -->
-		<dependency>
-			<groupId>it.consoft</groupId>
-			<artifactId>ldap-rest-beans</artifactId>
-			<version>${project.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.22.1</version>
 		</dependency>
 
+<!-- shared beans -->
+		<dependency>
+			<groupId>it.consoft</groupId>
+			<artifactId>ldap-rest-beans</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+<!-- utils -->
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 			<version>1.10</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
 
-		<dependency>
-			<groupId>it.edenred</groupId>
-			<artifactId>ConsoftLibPortale</artifactId>
-			<version>1.0</version>
-		</dependency>
-
-
+<!-- consoft -->
 		<dependency>
 			<groupId>it.consoft</groupId>
 			<artifactId>shared-utils-jdbc</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+<!-- test -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
