shared utils refactoring

--- a/ldap-web-spring/pom.xml
+++ b/ldap-web-spring/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>it.consoft</groupId>
@@ -13,6 +12,7 @@
 
 	<properties>
 		<spring.security.version>4.0.3.RELEASE</spring.security.version>
+		<shared.utils.version>0.0.1-SNAPSHOT</shared.utils.version>
 	</properties>
 
 	<dependencies>
@@ -79,6 +79,8 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		
+<!-- consoft -->
 		<dependency>
 			<groupId>it.consoft</groupId>
 			<artifactId>ldap-rest-beans</artifactId>
@@ -87,16 +89,28 @@
 		<dependency>
 			<groupId>it.consoft</groupId>
 			<artifactId>shared-utils-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${shared.utils.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>it.consoft</groupId>
+			<artifactId>shared-utils-ldap</artifactId>
+			<version>${shared.utils.version}</version>
 		</dependency>
 
+<!-- utils -->
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		
+<!-- test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>4.2.2.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock</artifactId>
