--- a/ldap-rest/pom.xml
+++ b/ldap-rest/pom.xml
@@ -19,33 +19,28 @@
 
 	<profiles>
 		<profile>
-			<id>test</id>
+			<id>local</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 
 			<properties>
+				<env>local</env>
+			</properties>
+		</profile>
+		<profile>
+			<id>test</id>
+
+			<properties>
 				<env>test</env>
 			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
 
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>2.6</version>
-						<configuration>
-							<webResources>
-								<resource>
-									<directory>src/main/resources</directory>
-									<filtering>true</filtering>
-								</resource>
-							</webResources>
-						</configuration>
-					</plugin>
-				</plugins>
-
-			</build>
+			<properties>
+				<env>prod</env>
+			</properties>
 		</profile>
 	</profiles>
 
@@ -118,4 +113,24 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<webResources>
+						<resource>
+							<directory>src/main/resources</directory>
+							<filtering>true</filtering>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
+		</plugins>
+
+	</build>
 </project>
