--- a/ldap-web-spring/src/main/webapp/WEB-INF/web.xml
+++ b/ldap-web-spring/src/main/webapp/WEB-INF/web.xml
@@ -42,8 +42,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-<!-- 		<param-value>/WEB-INF/spring-core-config.xml</param-value> -->
-		<param-value>/WEB-INF/spring-security-config.xml</param-value>
+		<param-value>/WEB-INF/spring-mvc-config.xml,/WEB-INF/spring-security-config.xml</param-value>
 	</context-param>
 
 </web-app>
