rest service ldap authentication

--- a/ldap-web-spring/src/main/resources/system.properties
+++ b/ldap-web-spring/src/main/resources/system.properties
@@ -3,6 +3,9 @@ environment=${env}
 ################################################
 # LOCAL DEPLOY (prefix and maven build profile 'local')
 ################################################
+
+
+#ldap
 local.ldap.providers=1
 
 local.ldap.1.url=ldap://ldap.forumsys.com
@@ -11,6 +14,11 @@ local.ldap.1.technical.user.username=tesla
 local.ldap.1.technical.user.password=password
 local.ldap.1.groups.attribute.name=cn
 local.ldap.1.user.attributes=cn,uid
+
+#rest service
+local.rest.service.url=http://localhost:8080/ldap-rest/rest/
+local.rest.service.username=test
+local.rest.service.password=test
 
 
 
