added users' profiles loading

--- a/ldap-rest/pom.xml
+++ b/ldap-rest/pom.xml
@@ -27,6 +27,15 @@
 			<properties>
 				<env>local</env>
 			</properties>
+
+			<dependencies>
+
+				<dependency>
+					<groupId>com.h2database</groupId>
+					<artifactId>h2</artifactId>
+					<version>1.4.190</version>
+				</dependency>
+			</dependencies>
 		</profile>
 		<profile>
 			<id>test</id>
@@ -97,6 +106,12 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 
 <!-- test -->
