--- a/ldap-rest/src/main/resources/system.properties
+++ b/ldap-rest/src/main/resources/system.properties
@@ -13,6 +13,9 @@ local.ldap.1.technical.user.password=password
 local.ldap.1.groups.attribute.name=cn
 local.ldap.1.user.attributes=cn,uid
 
+local.db.driver=org.h2.Driver
+local.db.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+
 
 ################################################
 # TEST ENVIRONMENT DEPLOY (prefix and maven build profile 'test')
