--- a/ldap-web-spring/src/main/resources/log4j.properties
+++ b/ldap-web-spring/src/main/resources/log4j.properties
@@ -1,4 +1,6 @@
 log4j.rootLogger=DEBUG, stdout
+log4j.category.org.springframework=ERROR, stdout
+log4j.additivity.org.springframework=false
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
