--- a/ldap-rest/src/test/resources/test.system.properties
+++ b/ldap-rest/src/test/resources/test.system.properties
@@ -19,3 +19,17 @@ unit-test.ldap.2.technical.user.username=tesla
 unit-test.ldap.2.technical.user.password=password
 unit-test.ldap.2.groups.attribute.name=cn
 unit-test.ldap.2.user.attributes=cn,uid
+
+
+#database
+unit-test.ldap.providers=1
+
+unit-test.ldap.1.url=ldap://ldap.forumsys.com
+unit-test.ldap.1.principal.template=uid=%s,dc=example,dc=com
+unit-test.ldap.1.technical.user.username=tesla
+unit-test.ldap.1.technical.user.password=password
+unit-test.ldap.1.groups.attribute.name=cn
+unit-test.ldap.1.user.attributes=cn,uid
+
+unit-test.db.driver=org.h2.Driver
+unit-test.db.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
