users CRUD operations

--- a/ldap-rest/src/main/resources/queries.properties
+++ b/ldap-rest/src/main/resources/queries.properties
@@ -7,6 +7,27 @@ environment=${env}
 ldap_local_group_rel.count.1=select count(*) tot from ldap_local_group_rel where ldap_group_name = 'Nikola Tesla'
 ldap_local_group_rel.insert.1=insert into ldap_local_group_rel values('Nikola Tesla','admin')
 
+users.search=select * from users where 1=1
+users.search.condition.username=and username like ?
+users.get.by_id=select * from users where id = ?
+users.get.by_username=select * from users where username = ?
+users.add=insert into users (username,email) values(?,?)
+users.edit=update users set email=? where id = ?
+users.delete.by_id=delete from users where id = ?
+
+groups.rel.by_ldap=select local_group_name from ldap_local_group_rel where ldap_group_name = ?
+groups.rel.search=select * from ldap_local_group_rel where 1=1
+groups.rel.search.condition.ldap=and ldap_group_name = ?
+groups.rel.search.condition.local=and local_group_name = ?
+groups.rel.delete=delete from ldap_local_group_rel where ldap_group_name = ? and local_group_name = ?
+groups.rel.delete.by_ldap=delete from ldap_local_group_rel where ldap_group_name = ?
+groups.rel.count.by_local=select count(*) tot from ldap_local_group_rel where local_group_name = ?
+groups.rel.add=insert into ldap_local_group_rel values (?,?)
+
+user_groups.delete.by_user=delete from user_groups where user_id = ?
+user_groups.add.by_user=insert into user_groups values(?,?)
+user_groups.delete.by_local=delete from user_groups where local_group_name = ?
+user_groups.get.by_user=select local_group_name from user_groups where user_id = ?
 
 ################################################
 # LOCAL ENVIRONMENT, H2 DIALECT
@@ -16,5 +37,6 @@ ldap_local_group_rel.insert.1=insert into ldap_local_group_rel values('Nikola Te
 ################################################
 # TEST ENVIRONMENT DEPLOY, ORACLE DIALECT
 ################################################
+test.users.add=insert into users (id,username,email) values(users_seq.nextVal,?,?)
 
 
