--- a/ldap-rest/src/main/resources/ddl.properties
+++ b/ldap-rest/src/main/resources/ddl.properties
@@ -12,19 +12,19 @@ environment=${env}
 ################################################
 # LOCAL, UNIT-TEST ENVIRONMENT, H2 DIALECT
 ################################################
-unit-test.0.users.create_table=CREATE TABLE IF NOT EXISTS users (id int primary key auto_increment not null,  username varchar(50) not null)
-unit-test.0.profiles.create_table=CREATE TABLE IF NOT EXISTS profiles(id int primary key auto_increment not null,  name varchar(50) not null)
-unit-test.1.user_profiles.create_table=CREATE TABLE IF NOT EXISTS user_profiles(user_id int not null references users(id), profile_id int not null references profiles(id), primary key (user_id, profile_id))
+unit-test.0.users.create_table=CREATE TABLE IF NOT EXISTS users (id int primary key auto_increment not null,  username varchar(50) not null, email varchar(500) not null)
+unit-test.1.user_profiles.create_table=CREATE TABLE IF NOT EXISTS user_groups(user_id int not null references users(id), local_group_name varchar(255) not null, primary key (user_id, local_group_name))
 unit-test.1.ldap_local_group_rel.create_table=CREATE TABLE IF NOT EXISTS ldap_local_group_rel(ldap_group_name varchar(255) not null, local_group_name varchar(255) not null, primary key (ldap_group_name, local_group_name))
 
-local.0.users.create_table=CREATE TABLE IF NOT EXISTS users (id int primary key auto_increment not null,  username varchar(50) not null)
-local.0.profiles.create_table=CREATE TABLE IF NOT EXISTS profiles(id int primary key auto_increment not null,  name varchar(50) not null)
-local.1.user_profiles.create_table=CREATE TABLE IF NOT EXISTS user_profiles(user_id int not null references users(id), profile_id int not null references profiles(id), primary key (user_id, profile_id))
-local.1.ldap_local_group_rel.create_table=CREATE TABLE IF NOT EXISTS ldap_local_group_rel(ldap_group_name varchar(255) not null, local_group_name varchar(255) not null, primary key (ldap_group_name, local_group_name))
 
 
 ################################################
 # TEST ENVIRONMENT, ORACLE DIALECT
 ################################################
+test.0.users.seq=CREATE SEQUENCE users_seq INCREMENT BY 1 START WITH 1 MAXVALUE   99999 NOCACHE NOCYCLE;
+
+test.1.users.create_table=CREATE TABLE IF NOT EXISTS users (id int primary key not null,  username varchar(50) not null, email varchar(500) not null)
+test.2.user_profiles.create_table=CREATE TABLE IF NOT EXISTS user_groups(user_id int not null references users(id), local_group_name varchar(255) not null, primary key (user_id, local_group_name))
+test.2.ldap_local_group_rel.create_table=CREATE TABLE IF NOT EXISTS ldap_local_group_rel(ldap_group_name varchar(255) not null, local_group_name varchar(255) not null, primary key (ldap_group_name, local_group_name))
 
 
