Added missing table's create

--- a/ldap-rest/src/main/webapp/WEB-INF/web.xml
+++ b/ldap-rest/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
 
 	<security-constraint>
 		<web-resource-collection>
+		    <web-resource-name>rest</web-resource-name>
 			<url-pattern>/rest/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
